--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "mongoose": "^5.12.14",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^5.0.0"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
